tests/baselines/reference/for-of10.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of10.ts(2,6): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/es6/for-ofStatements/for-of10.ts (1 errors) ====
    var v: string;
    for (v of [0]) { }
         ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.